--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -1,4 +1,4 @@
-$wrapperSideLeftMargin: 20px;
-$wrapperSideRightMargin: 20px;
-$wrapperMainLeftMargin: 40px;
-$wrapperMainRightMargin: 40px;
+$wrapperSideMargin: 20px;
+$wrapperMainMargin: 40px;
+$CharacterPlain-color: #fff;
+$MainBlue-color: #38aef0;
