--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "./messages-index";
 @import "font-awesome";
 
+
 body {
   overflow: hidden;
 }
@@ -17,18 +18,18 @@ body {
   display: block;
   width: 100vw;
   text-align: center;
-  color: #fff;
-  background-color: #38aef0;
+  color: $CharacterPlain-color;
+  background-color: $MainBlue-color;
 }
 .wrapper {
   width: 100vw;
   height: 100vh;
   display: flex;
-  .wrapper__side {
+  &__side {
     width: 300px;
     height: 100%;
     background-color: rgb(131, 73, 73);
-    .wrapper__side__head {
+    &__head {
       width: 300px;
       height: 100px;
       line-height: 100px;
@@ -36,36 +37,36 @@ body {
       position: fixed;
       h1 {
         display: inline-block;
-        color: #fff;
+        color: $CharacterPlain-color;
         font-size: 16px;
         font-weight: bold;
-        margin-left: $wrapperSideLeftMargin;
+        margin-left: $wrapperSideMargin;
         float: left;
       }
       ul {
         list-style: none;
-        margin-right: $wrapperSideRightMargin;
+        margin-right: $wrapperSideMargin;
         float: right;
         li {
           margin-left:3px;
           float: left;
           a {
-            color: #fff;
+            color: $CharacterPlain-color;
           }
         }
       }
     }
-    .wrapper__side__cont {
+    &__cont {
       width: 300px;
       height: calc(100vh - 100px);
       margin-top: 100px;
       padding: 20px 0 0 0;
       background-color: #2f3e51;
       overflow: scroll;
-      .wrapper__side__cont__inner {
+      &__inner {
         width: 260px;
         margin: 0 auto;
-        color: #fff;
+        color: $CharacterPlain-color;
         p.group {
           font-size: 15px;
           font-weight: bold;
@@ -79,7 +80,7 @@ body {
       }
     }
   }
-  .wrapper__main {
+  &__main {
     width: calc(100vw - 300px);
     height: 100%;
     background-color: rgb(131, 73, 73);
