--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,85 +4,6 @@
 
 @import "./reset";
 @import "./variable";
+@import "./message";
 @import "./messages-index";
 @import "font-awesome";
-
-
-body {
-  overflow: hidden;
-}
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-.breakingnews {
-  display: block;
-  width: 100vw;
-  text-align: center;
-  color: $CharacterPlain-color;
-  background-color: $MainBlue-color;
-}
-.wrapper {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  &__side {
-    width: 300px;
-    height: 100%;
-    background-color: rgb(131, 73, 73);
-    &__head {
-      width: 300px;
-      height: 100px;
-      line-height: 100px;
-      background-color: #253141;
-      position: fixed;
-      h1 {
-        display: inline-block;
-        color: $CharacterPlain-color;
-        font-size: 16px;
-        font-weight: bold;
-        margin-left: $wrapperSideMargin;
-        float: left;
-      }
-      ul {
-        list-style: none;
-        margin-right: $wrapperSideMargin;
-        float: right;
-        li {
-          margin-left:3px;
-          float: left;
-          a {
-            color: $CharacterPlain-color;
-          }
-        }
-      }
-    }
-    &__cont {
-      width: 300px;
-      height: calc(100vh - 100px);
-      margin-top: 100px;
-      padding: 20px 0 0 0;
-      background-color: #2f3e51;
-      overflow: scroll;
-      &__inner {
-        width: 260px;
-        margin: 0 auto;
-        color: $CharacterPlain-color;
-        p.group {
-          font-size: 15px;
-          font-weight: bold;
-          margin-bottom: 5px;
-        }
-        p.message {
-          font-size: 11px;
-          font-weight: bold;
-          margin-bottom:40px;
-        }
-      }
-    }
-  }
-  &__main {
-    width: calc(100vw - 300px);
-    height: 100%;
-    background-color: rgb(131, 73, 73);
-  }
-}
