--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,6 +6,7 @@
 @import "./variable";
 @import "./message";
 @import "./user";
+@import "./group";
 @import "font-awesome";
 @import "config/colors";
 @import "modules/flash";
