--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,7 +7,7 @@
         = current_user.name
       %ul
         %li
-          = link_to do
+          = link_to new_group_path do
             = fa_icon 'pencil-square-o'
         %li
           = link_to edit_user_path(current_user) do
