--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,11 +2,13 @@
  *= require font-awesome
  */
 
-@import "./reset";
 @import "./variable";
-@import "./message";
-@import "./user";
-@import "./group";
-@import "font-awesome";
+@import "messages/message";
+@import "config/reset";
 @import "config/colors";
 @import "modules/flash";
+@import "modules/user";
+@import "modules/group";
+@import "modules/side_bar";
+@import "modules/chat";
+@import "font-awesome";
