--- a/app/assets/stylesheets/modules/_side_bar.scss
+++ b/app/assets/stylesheets/modules/_side_bar.scss
@@ -40,15 +40,18 @@
       width: 260px;
       margin: 0 auto;
       color: $CharacterPlain-color;
-      p.group {
-        font-size: 15px;
+      a {
+        color: $CharacterPlain-color;
+        text-decoration: none;
         font-weight: bold;
-        margin-bottom: 5px;
-      }
-      p.message {
-        font-size: 11px;
-        font-weight: bold;
-        margin-bottom:40px;
+        p.group {
+          font-size: 15px;
+          margin-bottom: 5px;
+        }
+        p.message {
+          font-size: 11px;
+          margin-bottom:40px;
+        }
       }
     }
   }
