--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -8,10 +8,12 @@
           = fa_icon 'pencil-square-o'
       %li
         = link_to edit_user_path(current_user) do
-          = fa_icon 'cog'
+          = fa_icon 'cog', class: 'icon'
   .wrapper__side__cont
     .wrapper__side__cont__inner
       - current_user.groups.each do |group|
         = link_to group_messages_path(group) do
-          %p.group = group.name
-          %p.message メッセージはまだありません
+          %p.group
+            = group.name
+          %p.message
+            メッセージはまだありません
