--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,20 +5,23 @@
   .wrapper__main
     .wrapper__main__head
       .wrapper__main__head__title
-        %h1 ATestGroup-1
-        %p Member：aaaaaaaa
+        %h1
+          = @group.name
+        %p
+          Member：
+          = current_user.name
       .wrapper__main__head__button
         %a{href: ""} Edit
     .wrapper__main__cont
-      = render "messages/chat"
+      = render @messages
     .wrapper__main__foot
-      %form
+      = form_for [@group, @message], html: { multipart: true } do |f|
         .form_input
           .form_text
-            %input{type: "text", placeholder: "type a message"}
+            = f.text_field :content, placeholder: 'type a message'
           .form_file
-            %label.upload-label{for: "upload-icon"}
-              %i.fa.fa-picture-o
-              %input{type: "file", id: "upload-icon", style: "display:none;"}
+            = f.label :image, class: 'upload-label' do
+              = fa_icon 'picture-o'
+              = f.file_field :image, {style: "display:none;"}
         .form_button
-          %input{type: "submit",value: "Send"}
+          = f.submit 'Send'
