--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -16,4 +16,4 @@
           %p.group
             = group.name
           %p.message
-            メッセージはまだありません
+            = group.show_last_message
