--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -7,7 +7,8 @@
           = @group.name
         %p
           Member：
-          = current_user.name
+          - @group.users.each do |user|
+            = user.name
       .wrapper__main__head__button
         = link_to edit_group_path(@group.id) do
           Edit
