--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -2,7 +2,7 @@
   %h1 
     = message.user.name
   %p
-    = message.created_at.strftime("%Y/%m/%d %H:%M")
+    = message.created_at.in_time_zone("UTC").in_time_zone("Tokyo").strftime("%Y/%m/%d %H:%M")
 - if message.content.present?
   %p.message 
     = message.content
