--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -17,3 +17,4 @@
             = group.name
           %p.message
             = group.show_last_message
+      = link_to image_tag("/assets/logo.png", width: '135', alt: 'ロゴマーク'), root_path, class: 'top__search__logo'
